[gd_scene load_steps=13 format=2]

[ext_resource path="res://TaskManager/Flat-it - BioSans-Regular.otf" type="DynamicFontData" id=1]
[ext_resource path="res://TaskManager/FinishedPopup/FinishedPopup.gd" type="Script" id=2]

[sub_resource type="StyleBoxFlat" id=1]
content_margin_left = 20.0
content_margin_right = 20.0
content_margin_top = 20.0
content_margin_bottom = 20.0
bg_color = Color( 0.13, 0.14, 0.19, 0.5 )
border_width_left = 4
border_width_top = 4
border_width_right = 4
border_width_bottom = 4
border_color = Color( 0.878431, 0.878431, 0.878431, 1 )

[sub_resource type="StyleBoxFlat" id=2]
content_margin_left = 20.0
content_margin_right = 20.0
bg_color = Color( 0.647059, 0.937255, 0.67451, 1 )
border_width_left = 4
border_width_top = 4
border_width_right = 4
border_width_bottom = 4
border_color = Color( 1, 1, 1, 1 )

[sub_resource type="StyleBoxEmpty" id=3]

[sub_resource type="StyleBoxEmpty" id=4]

[sub_resource type="StyleBoxFlat" id=5]
content_margin_left = 20.0
content_margin_right = 20.0
bg_color = Color( 0.6, 0.6, 0.6, 0 )
border_width_left = 4
border_width_top = 4
border_width_right = 4
border_width_bottom = 4
border_color = Color( 1, 1, 1, 1 )

[sub_resource type="DynamicFont" id=6]
size = 48
use_mipmaps = true
use_filter = true
font_data = ExtResource( 1 )

[sub_resource type="StyleBoxEmpty" id=7]

[sub_resource type="StyleBoxEmpty" id=8]

[sub_resource type="StyleBoxFlat" id=9]
content_margin_left = 10.0
content_margin_right = 10.0
content_margin_top = 10.0
content_margin_bottom = 10.0
bg_color = Color( 0.878431, 0.878431, 0.878431, 1 )
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color( 0.12549, 0.141176, 0.192157, 1 )

[sub_resource type="DynamicFont" id=10]
size = 32
use_mipmaps = true
use_filter = true
font_data = ExtResource( 1 )

[node name="Popup" type="Popup"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -480.0
margin_top = -240.0
margin_right = 480.0
margin_bottom = 340.0
popup_exclusive = true
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Panel" type="Panel" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
custom_styles/panel = SubResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="EnterButton" type="Button" parent="Panel"]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -91.5
margin_top = -108.0
margin_right = 91.5
margin_bottom = -40.0
custom_styles/hover = SubResource( 2 )
custom_styles/focus = SubResource( 3 )
custom_styles/disabled = SubResource( 4 )
custom_styles/normal = SubResource( 5 )
custom_fonts/font = SubResource( 6 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
text = "ENTER"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="StreamName" type="VBoxContainer" parent="Panel"]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -348.0
margin_top = 48.0
margin_right = 348.0
margin_bottom = 172.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="StreamNameLabel" type="Label" parent="Panel/StreamName"]
margin_right = 696.0
margin_bottom = 60.0
custom_fonts/font = SubResource( 6 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
text = "stream name"
align = 1
uppercase = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="StreamNameLineEdit" type="LineEdit" parent="Panel/StreamName"]
margin_top = 64.0
margin_right = 696.0
margin_bottom = 124.0
mouse_filter = 1
size_flags_horizontal = 3
custom_styles/read_only = SubResource( 7 )
custom_styles/focus = SubResource( 8 )
custom_styles/normal = SubResource( 9 )
custom_fonts/font = SubResource( 10 )
custom_colors/selection_color = Color( 0.2, 0.219608, 0.278431, 1 )
custom_colors/cursor_color = Color( 0.12549, 0.141176, 0.192157, 1 )
custom_colors/font_color_selected = Color( 1, 1, 1, 1 )
custom_colors/font_color = Color( 0.12549, 0.141176, 0.192157, 1 )
align = 1
placeholder_text = "STREAM NAME"
placeholder_alpha = 0.3
caret_blink = true
__meta__ = {
"_editor_description_": ""
}

[node name="StreamDuration" type="VBoxContainer" parent="Panel"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -348.0
margin_top = -22.0
margin_right = 348.0
margin_bottom = 102.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="Panel/StreamDuration"]
margin_right = 696.0
margin_bottom = 60.0
custom_fonts/font = SubResource( 6 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
text = "Input Final Stream Duration"
align = 1
uppercase = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HBoxContainer" type="HBoxContainer" parent="Panel/StreamDuration"]
margin_left = 153.0
margin_top = 64.0
margin_right = 543.0
margin_bottom = 124.0
size_flags_horizontal = 4
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HourInput" type="LineEdit" parent="Panel/StreamDuration/HBoxContainer"]
margin_right = 116.0
margin_bottom = 60.0
mouse_filter = 1
size_flags_horizontal = 3
custom_styles/read_only = SubResource( 7 )
custom_styles/focus = SubResource( 8 )
custom_styles/normal = SubResource( 9 )
custom_fonts/font = SubResource( 10 )
custom_colors/selection_color = Color( 0.2, 0.219608, 0.278431, 1 )
custom_colors/cursor_color = Color( 0.12549, 0.141176, 0.192157, 1 )
custom_colors/font_color_selected = Color( 1, 1, 1, 1 )
custom_colors/font_color = Color( 0.12549, 0.141176, 0.192157, 1 )
placeholder_text = "HOUR"
placeholder_alpha = 0.3
caret_blink = true
__meta__ = {
"_editor_description_": ""
}

[node name="Label" type="Label" parent="Panel/StreamDuration/HBoxContainer"]
margin_left = 120.0
margin_right = 133.0
margin_bottom = 60.0
custom_fonts/font = SubResource( 6 )
text = ":"
align = 1
valign = 1
uppercase = true

[node name="MinutesInput" type="LineEdit" parent="Panel/StreamDuration/HBoxContainer"]
margin_left = 137.0
margin_right = 253.0
margin_bottom = 60.0
mouse_filter = 1
size_flags_horizontal = 3
custom_styles/read_only = SubResource( 7 )
custom_styles/focus = SubResource( 8 )
custom_styles/normal = SubResource( 9 )
custom_fonts/font = SubResource( 10 )
custom_colors/selection_color = Color( 0.2, 0.219608, 0.278431, 1 )
custom_colors/cursor_color = Color( 0.12549, 0.141176, 0.192157, 1 )
custom_colors/font_color_selected = Color( 1, 1, 1, 1 )
custom_colors/font_color = Color( 0.12549, 0.141176, 0.192157, 1 )
placeholder_text = "MIN"
placeholder_alpha = 0.3
caret_blink = true
__meta__ = {
"_editor_description_": ""
}

[node name="Label2" type="Label" parent="Panel/StreamDuration/HBoxContainer"]
margin_left = 257.0
margin_right = 270.0
margin_bottom = 60.0
custom_fonts/font = SubResource( 6 )
text = ":"
align = 1
valign = 1
uppercase = true

[node name="SecondsInput" type="LineEdit" parent="Panel/StreamDuration/HBoxContainer"]
margin_left = 274.0
margin_right = 390.0
margin_bottom = 60.0
mouse_filter = 1
size_flags_horizontal = 3
custom_styles/read_only = SubResource( 7 )
custom_styles/focus = SubResource( 8 )
custom_styles/normal = SubResource( 9 )
custom_fonts/font = SubResource( 10 )
custom_colors/selection_color = Color( 0.2, 0.219608, 0.278431, 1 )
custom_colors/cursor_color = Color( 0.12549, 0.141176, 0.192157, 1 )
custom_colors/font_color_selected = Color( 1, 1, 1, 1 )
custom_colors/font_color = Color( 0.12549, 0.141176, 0.192157, 1 )
placeholder_text = "SEC"
placeholder_alpha = 0.3
caret_blink = true
__meta__ = {
"_editor_description_": ""
}

[connection signal="about_to_show" from="." to="." method="_on_Popup_about_to_show"]
[connection signal="pressed" from="Panel/EnterButton" to="." method="_on_EnterButton_pressed"]
